update readme to reflect environment variable changes